Fix overflow in more data

--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@
   width: 20rem;
 }
 .selected-feature pre {
-  overflow: none;
+  overflow: visible;
   white-space: pre;
 }
 .position-control {
